# tautonet

./: README.md  gen_protopy.sh  install.sh  requirements.txt  setup.cfg  setup.py
an_utest/: tbase.py  tcase.py  tnet.py
autonet/: tbase.py  tcase.py  tclient.py  tnet.py  utils.py
autonet/okproto/: __init__.py  explorer_pb2.py  explorer_pb2_grpc.py  inner_pb2.py  inner_pb2_grpc.py  message.proto  message_pb2.py  message_pb2_grpc.py  (+2 more)
scripts/: build_peer.sh  info.sh  watch_okc_logs.sh  watch_okc_process.sh
tcases/: 201812_passed.json  case1_init.expect  case1_init.input  case1_init_pprof_on.expect  case1_init_pprof_on.input  case2.1_valid_1trx_to_ds.expect  case2.1_valid_1trx_to_ds.input  case2.2_valid_11trx_to_ds.expect  case2.2_valid_11trx_to_ds.input  case2.3_valid_11trx_to_miner.input  case3_invalid_1trx_to_ds.expect  case3_invalid_1trx_to_ds.input  case4.1_valid_300trx_to_10miner.expect  case4.1_valid_300trx_to_10miner.input  case4_valid_3000trx_to_10miner.expect  case4_valid_3000trx_to_10miner.input  case5_invalid_300trx_to_10miner.expect  case5_invalid_300trx_to_10miner.input  case6_startup_1new_peer.expect  case6_startup_1new_peer.input  case7.1_start_1idle_kill_1ShardLead.input  case7.2_start_1idle_kill_1ShardNode.expect  case7.2_start_1idle_kill_1ShardNode.input  case7.3_start_1idle_kill_1DSLead.expect  case7.3_start_1idle_kill_1DSLead.input  case7.4_start_1idle_kill_1DSNode.expect  case7.4_start_1idle_kill_1DSNode.input  cli_case1_create_account.expect  cli_case1_create_account.input  genesis.json  hostnames.json  sample.expect  sample.input
(+1 files in other folders)
