[metadata]
name = tautonet
version = 2018.11
summary = okchain autonet test tool
description-file =
    		README.rst
author = LingtingFu
author-email = lingting.fu@okcoin.com
home-page =
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    autonet
    an_utest

[entry_points]
console_scripts =
    autonet/tclient.py

[global]
setup-hooks =
    pbr.hooks.setup_hook